fixed Image delete menu not showing in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -367,6 +367,9 @@ header:not(.GroupBadge) {
   #ImageModal {
     width: 85vw;
   }
+  #menuArrowIcon {
+    display: inline;
+  }
 }
 @media screen and (min-width: 481px) {
   header {
@@ -405,6 +408,9 @@ header:not(.GroupBadge) {
   }
   #ImageModal {
     width: 400px;
+  }
+  #menuArrowIcon {
+    display: none;
   }
 }
 @media screen and (min-width: 769px) {
